--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+
+.c-hero__image-container-inner {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.c-hero__image-container-inner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .tl-edges {
     max-width: 100%;
     overflow-x: hidden
